--- a/examples/example_notebooks/existing code gen.ipynb
+++ b/examples/example_notebooks/existing code gen.ipynb
@@ -20,9 +20,9 @@
    "source": [
     "config = Configuration()\n",
     "# config.host = 'http://localhost:8080'\n",
-    "config.access_token = 'slxFoCK7N2.eh8HOdrnlD2O5pzsm1L125iza1lRAHi4qev9UGpOgwPjUBPxdb2QT'\n",
+    "config.access_token = \"accesstoken\"\n",
     "config.host = 'https://api.whylabsapp.com'\n",
-    "config.api_key = {\"ApiKeyAuth\":'slxFoCK7N2.eh8HOdrnlD2O5pzsm1L125iza1lRAHi4qev9UGpOgwPjUBPxdb2QT'}\n"
+    "config.api_key = {\"ApiKeyAuth\":'accesstoken'}\n"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "source": [
     "client = ApiClient(config)\n",
     "api = ModelsApi(client)\n",
-    "org_id = 'org-JpsdM6'\n",
+    "org_id = 'org-id'\n",
     "\n",
     "\n",
     "models = api.list_models(org_id=org_id)"
@@ -119,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +133,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 28 2022, 21:06:00) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "93b212bf6261bb0ca5bb2db3e02282b672a30bcdd7bd2155c052e2f61b7dda1f"
+   }
   }
  },
  "nbformat": 4,
