--- a/examples/example_notebooks/manual code gen.ipynb
+++ b/examples/example_notebooks/manual code gen.ipynb
@@ -18,9 +18,9 @@
    "outputs": [],
    "source": [
     "config = Configuration()\n",
-    "config.access_token = 'slxFoCK7N2.eh8HOdrnlD2O5pzsm1L125iza1lRAHi4qev9UGpOgwPjUBPxdb2QT'\n",
+    "config.access_token = 'accesstoken'\n",
     "config.host = 'https://api.whylabsapp.com'\n",
-    "config.api_key = {\"ApiKeyAuth\":'slxFoCK7N2.eh8HOdrnlD2O5pzsm1L125iza1lRAHi4qev9UGpOgwPjUBPxdb2QT'}"
+    "config.api_key = {\"ApiKeyAuth\":'accesstoken'}"
    ]
   },
   {
@@ -31,9 +31,9 @@
    "outputs": [],
    "source": [
     "config = Configuration()\n",
-    "config.access_token = 'slxFoCK7N2.eh8HOdrnlD2O5pzsm1L125iza1lRAHi4qev9UGpOgwPjUBPxdb2QT'\n",
+    "config.access_token = 'accesstoken'\n",
     "config.host = 'https://api.whylabsapp.com'\n",
-    "config.api_key = {\"X-API-Key\":'slxFoCK7N2.eh8HOdrnlD2O5pzsm1L125iza1lRAHi4qev9UGpOgwPjUBPxdb2QT'}\n",
+    "config.api_key = {\"X-API-Key\":'accesstoken'}\n",
     "\n",
     "client = ApiClient(config)\n",
     "api = ModelsApi(client)\n",
@@ -84,7 +84,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +98,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 28 2022, 21:06:00) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a984ccc36b1e9c494eccba45e57471b7dc8d51562c767477f459087bfced0efc"
+   }
   }
  },
  "nbformat": 4,
